# the_inventory

./: .dockerignore  .env.example  .gitignore  ADMIN_IMPROVEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  SECURITY.md  TEST_USERS.md  andasy.hcl  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/rules/: common.mdc  django-python.mdc  frontend-nextjs.mdc  the-inventory-core.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instrunctions/: common.instructions.md
.github/workflows/: ci.yml  codeql.yml
api/: language.py  middleware.py  pagination.py  permissions.py  urls.py
api/mixins/: translatable_read.py
api/serializers/: __init__.py  audit.py  (+10 more)
docs/: ARCHITECTURE.md  COOKIE_MIGRATION_TASKS.md  ENVIRONMENT.md  I18N_FRONTEND.md  I18N_LIMITATIONS.md  ROADMAP.md  TASKS.MD  TASKS.md  TROUBLESHOOTING.md  api-contract.md  api.md  architecture.md  debugging.md  deployment.md  development.md  environment.md  faq.md  features.md  getting-started.md  integration.md  operations.md  plugins.md  roadmap.md  security.md  seeding.md  test-users.md  troubleshooting.md
frontend/: .env.local.example  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
home/: apps.py  i18n_sync.py
inventory/: admin.py  filters.py  models.py  panels.py  tasks.py  views.py  wagtail_hooks.py
procurement/: admin.py  wagtail_hooks.py
reports/: exports.py  filters.py  views.py  wagtail_hooks.py
sales/: admin.py  wagtail_hooks.py
seeders/: README.md  __init__.py  apps.py  base.py  category_seeder.py  locale_support.py  low_stock_seeder.py  platform_user_seeder.py  product_seeder.py  seeder_manager.py  stock_location_seeder.py  stock_movement_seeder.py  stock_record_seeder.py  tenant_seeder.py  user_seeder.py  wagtail_locale_seeder.py
src/: manage.py
tenants/: admin.py  context.py  context_processors.py  django_admin_site.py  managers.py  middleware.py  models.py  permissions.py  services.py  snippets.py  wagtail_forms.py  wagtail_hooks.py  wagtail_views.py
tests/: __init__.py  conftest.py  runner.py  test_locale_catalogs.py  test_locale_middleware.py
the_inventory/: celery.py  urls.py
(+918 files in other folders)
