[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "the_inventory"
version = "v1.0.1"
description = "An open-source inventory management system built with Wagtail CMS and Django. Manage products, stock levels, warehouses, purchases, and sales — all through Wagtail's powerful admin interface."
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.ruff.lint.per-file-ignores]
"src/the_inventory/__init__.py" = ["E402"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
