[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "the_inventory"
version = "v1.0.1"
description = "An open-source inventory management system built with Wagtail CMS and Django. Manage products, stock levels, warehouses, purchases, and sales — all through Wagtail's powerful admin interface."
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

# Third-party, pip-installable plugins advertise themselves to The Inventory by
# exposing an entry point in the ``the_inventory.plugins`` group whose value is
# the dotted path of the Django app to install, e.g. in the plugin's own
# pyproject.toml:
#
#   [project.entry-points."the_inventory.plugins"]
#   barcodes = "inventory_barcodes"
#
# Discovered apps are appended to INSTALLED_APPS at startup. See docs/plugins.md.

[tool.ruff.lint.per-file-ignores]
"src/the_inventory/__init__.py" = ["E402"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
